<resources>
    <string name="app_name">Squizzy</string>

    <string name="welcome_screen">Bienvenue dans TopQuiz. Quel est votre prénom ?</string>
    <string name="welcome_screen_previous_play">Et rebonjour %s !\n Ton dernier score était de %d; vas tu faire mieux cette fois ?</string>
    <string name="enter_your_name">Merci d\'entrez votre prénom</string>
    <string name="play_button">Jouer !</string>

    <string name="question_1">Qui est le créateur d\'android?</string>
    <string name="question_1_answer_1" translatable="false">Andy Rubin</string>
    <string name="question_1_answer_2" translatable="false">Steve Wozniak</string>
    <string name="question_1_answer_3" translatable="false">Jake Wharton</string>
    <string name="question_1_answer_4" translatable="false">Paul Smith</string>


    <string name="question_2">En quelle année l\'homme à posé le pied sur la lune en premier ?</string>
    <string name="question_2_answer_1" translatable="false">1958</string>
    <string name="question_2_answer_2" translatable="false">1962</string>
    <string name="question_2_answer_3" translatable="false">1967</string>
    <string name="question_2_answer_4" translatable="false">1969</string>

    <string name="question_3">Quel est le numéro de la maison des simpsons ?</string>
    <string name="question_3_answer_1" translatable="false">42</string>
    <string name="question_3_answer_2" translatable="false">101</string>
    <string name="question_3_answer_3" translatable="false">666</string>
    <string name="question_3_answer_4" translatable="false">742</string>

    <string name="question_4">Quel est le meilleur fruit ?</string>
    <string name="question_4_answer_1">La banane</string>
    <string name="question_4_answer_2">Le tacos merguez</string>
    <string name="question_4_answer_3">La Clémentine</string>
    <string name="question_4_answer_4">Le durian</string>

    <string name="question_5">Quel est la réponse à la vie ?</string>
    <string name="question_5_answer_1">Finir le tp d\'android</string>
    <string name="question_5_answer_2" translatable="false">42</string>
    <string name="question_5_answer_3">Ne pas crever</string>
    <string name="question_5_answer_4">Jouer à Gorilla tag en VR</string>

    <string name="correct_answer">Bien joué !</string>
    <string name="wrong_answer">Raté !</string>
    <string name="finish_alert_title">Bien joué !</string>
    <string name="finish_final_score">Votre score final est de : </string>
    <string name="finish_final_button">OK</string>
    <string name="leaderboard">Classement</string>
    <string name="best_score">Votre meilleur score :</string>


    <string name="app_title">Squizzy</string>

    <string name="signup_login_input_placeholder">Pseudo</string>
    <string name="signup_firstname_input_placeholder">Prénom</string>
    <string name="signup_lastname_input_placeholder">Nom</string>
    <string name="signup_password_input_placeholder">••••••••••</string>
    <string name="signup_button_signup_placeholder">S\'inscrire</string>
    <string name="signup_link_connection_placeholder">Déjà un compte?</string>

    <string name="connection_login_input_placeholder">Pseudonyme</string>
    <string name="connection_password_input_placeholder">••••••••••</string>
    <string name="connection_button_signup_placeholder">Se connecter</string>
    <string name="connection_link_connection_placeholder">Inscrivez-vous !</string>

    <string name="menu_button_quiz">Quiz</string>
    <string name="menu_button_leaderboard">Leaderboard</string>
    <string name="menu_button_questioncreation">Créer une question</string>
    <string name="field_required_error">Ce champ est obligatoire</string>
    <string name="user_created">L\'utilisateur a bien été créé</string>
    <string name="user_created_error">L\'utilisateur n\'a pa pu être créé, le nom d\'utilisateur doit déjà être pris</string>
    <string name="connection_success">La connexion a réussi</string>
    <string name="connection_error">Nous n\'avons pas pu vous authentifier</string>

    <string name="question_creation_edittext_question">Question</string>
    <string name="question_creation_edittext_answer1">Réponse 1</string>
    <string name="question_creation_edittext_answer2">Réponse 2</string>
    <string name="question_creation_edittext_answer3">Réponse 3</string>
    <string name="question_creation_edittext_answer4">Réponse 4</string>
    <string name="question_creation_button_submit">Valider</string>

</resources>
