<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connection">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="100dp"
        android:text="@string/app_title"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_edittext_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="124dp"
        android:autofillHints="AUTOFILL_HINT_USERNAME"
        android:ems="10"
        android:inputType="text"
        android:text="@string/connection_login_input_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/signup_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/connection_password_input_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_edittext_login"
        android:autofillHints="AUTOFILL_HINT_PASSWORD"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/signup_button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        android:text="@string/connection_button_signup_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_edittext_password" />

    <TextView
        android:id="@+id/signup_link_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="20dp"
        android:text="@string/connection_link_connection_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>