<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionCreation">


    <Button
        android:id="@+id/question_creation_button_return"
        style="@style/ButtonReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="6dp" />

    <EditText
        android:id="@+id/question_creation_edittext_question"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        android:background="@color/blue"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_creation_button_return"
        tools:ignore="MissingConstraints"
        tools:text="@string/question_creation_edittext_question" />

    <EditText
        android:id="@+id/question_creation_edittext_answer1"
        style="@style/EditTextQstCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_creation_edittext_question"
        android:hint="@string/question_creation_edittext_answer1" />

    <EditText
        android:id="@+id/question_creation_edittext_answer2"
        style="@style/EditTextQstCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_creation_edittext_answer1"
        android:hint="@string/question_creation_edittext_answer2" />

    <EditText
        android:id="@+id/question_creation_edittext_answer3"
        style="@style/EditTextQstCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_creation_edittext_answer2"
        android:hint="@string/question_creation_edittext_answer3" />

    <EditText
        android:id="@+id/question_creation_edittext_answer4"
        style="@style/EditTextQstCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_creation_edittext_answer3"
        android:hint="@string/question_creation_edittext_answer4" />

    <Button
        android:id="@+id/question_creation_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:text="@string/question_creation_button_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_creation_edittext_answer4" />

    <RadioGroup
        android:id="@+id/question_creation_radiogroup"
        android:layout_width="54dp"
        android:layout_height="326dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="285dp">

        <RadioButton
            android:id="@+id/question_creation_radio_answer1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:checked="false"
            android:text="1"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/question_creation_radiogroup" />

        <RadioButton
            android:id="@+id/question_creation_radio_answer2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:checked="false"
            android:text="2"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/question_creation_radiogroup" />

        <RadioButton
            android:id="@+id/question_creation_radio_answer3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:checked="false"
            android:text="3"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/question_creation_radiogroup" />

        <RadioButton
            android:id="@+id/question_creation_radio_answer4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:checked="false"
            android:text="4"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/question_creation_radiogroup" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>